2014-03-31  Titus Brown  <t@Titus-MacBook-Air-2.local>

    * scripts/*.py,khmer/khmer_args.py: added 'info' function to khmer_args,
    and added citation information to each script.
    * CITATION: added basic citation information for khmer functionality.

2013-03-31  Michael R. Crusoe  <mcrusoe@msu.edu>

    * docs/scripts.txt,scripts/*.py,khmer/*.py: overhaul the documentation of
    the scripts. Uses sphinxcontrib.autoprogram to leverage the existing
    argparse objects. Moved the documentation into each script + misc cleanups.
    All scripts support the --version option. Migrated the last scripts to use
    khmer_args
    * docs/blog-posts.txt: removed outdated reference to filter-exact.py; its
    replacement filter-abund.py is better documented in the eel-pond protocol
    * figuregen/,novelty/,plots/,templatem/,scripts/do-partition.sh: removed
    outdated code not part of core project

2013-03-30  Michael R. Crusoe  <mcrusoe@msu.edu>

    * setup.py: monkeypatched distutils.Distribution.reinitialize_command() so
    that it matches the behavior of Distribution.get_command_obj(). This fixes
    issues with 'pip install -e' and './setup.py nosetests' not respecting the
    setup.cfg configuration directives for the build_ext command. Also
    enhanced our build_ext command to respect the dry_run mode.

    * .ycm_extra_conf.py: Update our custom YouCompleteMe configuration to
    query the package configuration for the proper compilation flags.

2014-03-28  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile,setup.py: demote nose & sphinx to extra dependencies.
    Auto-install Python developer tools as needed.

2013-03-27  Michael R. Crusoe  <mcrusoe@msu.edu>

    * The system zlib and bzip2 libraries are now used instead of the bundled
    versions if specified in setup.cfg or the command line.

2014-03-25  Michael R. Crusoe  <mcrusoe@msu.edu>

    * Makefile: update cppcheck command to match new version of Jenkins